src/test/deca/context/valid/test_class/unit_new.deca
// Description:
//    Unit Test Creation Class
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A {
    

}

{
    A a = new A() ;
}
